saved quote from explore has config completed

--- a/src/app/pages/explore/explore.component.html
+++ b/src/app/pages/explore/explore.component.html
@@ -3,5 +3,9 @@
 </section>
 
 <section id="explore_list">
-  <list></list>
+  @if (isLoading()) {
+    Looking for new quotes ....
+  } @else {
+    <list [list]="quotesService.exploreQuotes()"></list>
+  }
 </section>
