--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,8 +4,8 @@
 </section>
 
 <section id="user_list">
-  @if (quoteService.quotes().length > 0) {
-    <list></list>
+  @if (quoteService.userQuotes().length > 0) {
+    <list [list]="quoteService.userQuotes()"></list>
   } @else {
     <span class="no_quotes">It seem you don't have any quote saved :/</span>
   }
