--- a/src/app/ui/list/list.component.html
+++ b/src/app/ui/list/list.component.html
@@ -1,6 +1,6 @@
 <section id="list">
   <div class="filters">
-    <filters></filters>
+    <!-- <filters></filters> -->
   </div>
 
   <div class="quotes">
@@ -25,7 +25,6 @@
             <span class="icon icon-bookmarkcopy2"></span>
             <span>Go back</span>
           </a>
-          <span class="no_quotes">No quotes founded!</span>
         </div>
       }
       <span>No quotes founded!</span>
