disable all card when one is in edit mode

--- a/src/app/ui/list/list.component.html
+++ b/src/app/ui/list/list.component.html
@@ -16,7 +16,8 @@
         }
       </div>  
       @for (quote of resortList(); track quote.id) {
-        <quote-card [quote]="quote" [type]="isExplorePage ? 'explore_list' : 'user_list'"></quote-card>
+        <quote-card [class.disable]= "quote.id !== quotesService.quoteInEditMode() && disableCard()"
+        [quote]="quote" [type]="isExplorePage ? 'explore_list' : 'user_list'"></quote-card>
       }
     } @else {
       @if(isExplorePage) {
