switch edit - list working

--- a/src/app/ui/ctas/ctas.component.html
+++ b/src/app/ui/ctas/ctas.component.html
@@ -9,6 +9,6 @@
   </div>
 
   @if (isCreateModeOn()) {
-    <quote-card [quote]="newQuote" type="creation"></quote-card>
+    <quote-card [quote]="newQuote" originalType="creation"></quote-card>
   }
 </section>
