--- a/src/app/ui/quote-card/quote-card.component.html
+++ b/src/app/ui/quote-card/quote-card.component.html
@@ -35,7 +35,7 @@
   
     <div class="descr">
       @if(quote().isEditMode) {
-        <textarea [(ngModel)]="newDescription" class="italic" name="quote_descr"
+        <textarea [(ngModel)]="quote().editFields.newDescription" class="italic" name="quote_descr"
         >{{ quote().description }}</textarea>
       } @else { <p class="italic">{{ quote().description }}</p> }
     </div>
@@ -44,7 +44,7 @@
   
     <div class="footer">
       @if(quote().isEditMode) {
-        <input class="edit_author" [(ngModel)]="newAuthor" type="text" name="quote_author" [placeholder]="quote().author">
+        <input class="edit_author" [(ngModel)]="quote().editFields.newAuthor" type="text" name="quote_author" [placeholder]="quote().author">
       } @else { <span>{{ quote().author }}</span> }
   
       <div class="feat">
