--- a/src/app/ui/list/list.component.html
+++ b/src/app/ui/list/list.component.html
@@ -1,6 +1,6 @@
 <section id="list">
   <div class="filters">
-    <!-- <filters></filters> -->
+    <filters [startList]="list()"></filters>
   </div>
 
   <div class="quotes">
