--- a/src/app/pages/explore/explore.component.scss
+++ b/src/app/pages/explore/explore.component.scss
@@ -9,7 +9,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px var(--primary-color) solid;
   
   h2 {
     text-align: center;
@@ -23,6 +22,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  list { width: 100%; }
 }
 
 @media(min-width: 550px) {
