created pagination component

--- a/src/app/pages/explore/explore.component.html
+++ b/src/app/pages/explore/explore.component.html
@@ -7,5 +7,6 @@
     Looking for new quotes ....
   } @else {
     <list [list]="quotesService.exploreQuotes()"></list>
+    <pagination></pagination>
   }
 </section>
