--- a/src/app/ui/quote-card/quote-card.component.html
+++ b/src/app/ui/quote-card/quote-card.component.html
@@ -1,4 +1,4 @@
-<article [id]="quote().id" class="quote">
+<article [id]="quote().id_custom" class="quote">
   @if (config()) {
     <div class="header">
       <div class="header_left">
