--- a/src/app/ui/list/list.component.html
+++ b/src/app/ui/list/list.component.html
@@ -1,13 +1,14 @@
 <section id="list">
+  <button (click)="scrollTop()" class="go_top pill full">
+    <span class="icon icon-arrow-thick-up"></span>
+  </button>
   <div class="filters">
     <filters [startList]="list()"></filters>
     @if(isExplorePage && resortList().length > 0) {
-      <div class="no_response">
-        <a routerLink="/" class="pill full">
-          <span class="icon icon-bookmarkcopy2"></span>
-          <span>Go back</span>
-        </a>
-      </div>
+      <a routerLink="/" class="pill full">
+        <span class="icon icon-bookmarkcopy2"></span>
+        <span>Go back</span>
+      </a>
     }
   </div>
 
