--- a/src/app/ui/filters/filters.component.html
+++ b/src/app/ui/filters/filters.component.html
@@ -11,7 +11,7 @@
     }
   </div>
   <div class="filters_actual">
-    <input (input)="filterBy('typed')" [(ngModel)]="filters.typed" type="text" class="items" placeholder="Type quote or author ...">
+    <input (input)="filterBy('typed')" [(ngModel)]="appliedFilters.typed" type="text" class="items" placeholder="Type quote or author ...">
     <span (click)="filters.favorites = !filters.favorites; filterBy('fav')" class="items" [class.active]="appliedFilters.favorites">Show favorites only</span>
     
     @if(filters.authors.length > 0) {
