--- a/src/app/ui/filters/filters.component.scss
+++ b/src/app/ui/filters/filters.component.scss
@@ -14,6 +14,8 @@
           font-size: .9rem;
           border-bottom: var(--gold) 1px solid;
           padding: .8rem;
+          
+          input[type="checkbox"] { display: none; }
 
           &.active {
             background-color: var(--gold);
