--- a/src/app/ui/pagination/pagination.component.html
+++ b/src/app/ui/pagination/pagination.component.html
@@ -1,5 +1,21 @@
-@for (pg of allPages; track $index) {
-  <button (click)="changePage(pg)" class="single_page" [class.current]="pg === dataPage().page">
-    <span>{{pg}}</span>
-  </button>
-}
+<section id="pagination">
+  <div class="change_pages">
+    <span class="icon icon-cheveron-outline-left"></span>
+  </div>
+
+  <div class="pages"
+    (mousedown)="initDrag($event)"
+    (mousemove)="dragging($event)"
+    (mouseup)="endDrag()"
+    >
+    @for (pg of allPages; track $index) {
+      <!-- <button type="button" (click)="changePage(pg)" class="single_page" [class.current]="pg === dataPage().page">
+      </button> -->
+      <span>{{pg}}</span>
+    }
+  </div>
+
+  <div class="change_pages">
+    <span class="icon icon-cheveron-outline-right"></span>
+  </div>
+</section>
