control data page on template

--- a/src/app/pages/explore/explore.component.html
+++ b/src/app/pages/explore/explore.component.html
@@ -7,6 +7,9 @@
     Looking for new quotes ....
   } @else {
     <!-- <list [list]="quotesService.exploreQuotes()"></list> -->
+  }
+  
+  @if(paginator.totalPages !== 0) {
     <pagination [dataPage]="paginator"></pagination>
   }
 </section>
